[metadata]
license_file = LICENSE

[tool:pytest]
addopts=--tb=short --strict -ra
testpaths = 
    tests

[flake8]
max-line-length = 120
exclude =
    migrations
per-file-ignores =
    drf_magic/models.py:E501

[isort]
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django,pytz,uritemplate
known_first_party=drf_magic,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = drf_magic/*,tests/*
branch = 1

[coverage:report]
include = drf_magic/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError